--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.3.3",
+    "semantic-ui-dropdown": "^2.3.2",
     "semantic-ui-react": "^0.82.3"
   },
   "scripts": {
